<resources>
    <string name="hintFirstLastName">ФИО (Отчество при наличии)</string>
    <string name="hintLogin">Придумайте логин</string>
    <string name="hintLoginSignIn">Логин</string>
    <string name="hintPassword">Придумайте пароль</string>
    <string name="hintPasswordSignIn">Пароль</string>
    <string name="hintPhone">Номер телефона</string>
    <string name="txtRegistrationForm">Регистрационная форма</string>
    <string name="txtBtnRegister">Регистрация</string>
    <string name="txtBtnLogin">Войти</string>
    <string name="txtBtnForgotPassword">Забыли пароль</string>
    <string name="app_name">application</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="prompt_login">Login</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_register">Register me</string>
    <string name="promt_username">Username</string>
    <string name="txtSignInForm">Вход</string>

    <string name="registration">Registration</string>
    <string name="send">SEND</string>
    <string name="sign_up_for_facebook">Sign up for facebook</string>
</resources>
